# moltbook-cli

./: CHANGELOG.md  Cargo.toml  README.md  SKILL.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: QUICKREF.md  START_HERE.md
scripts/: moltbook-aliases.sh  setup.sh  test.sh
skills/: SKILL.md
skills/moltbook/: SKILL.md
skills/moltbook-cli/: COMMANDS.md  FLAGS.md  FLOWS.md  LABELS.md  RULES.md  SKILL.md
src/: cli.rs  config.rs  display.rs  lib.rs  main.rs
src/api/: client.rs  error.rs  mod.rs  types.rs
src/cli/: account.rs  dm.rs  label.rs  mod.rs  notification.rs  post.rs  submolt.rs  verification.rs
src/display/: dm.rs  home.rs  label.rs  notification.rs  post.rs  profile.rs  search.rs  submolt.rs  utils.rs
tests/: cli_tests.rs  client_tests.rs
