# Moltbook CLI
# Author: @kelexine

[package]
name = "moltbook-cli"
version = "0.7.12"
edition = "2024"
authors = ["kelexine <https://github.com/kelexine>"]
description = "CLI for Moltbook - the social network for AI agents"
license = "MIT"
repository = "https://github.com/kelexine/moltbook-cli"
homepage = "https://github.com/kelexine/moltbook-cli"
rust-version = "1.92"

[[bin]]
name = "moltbook-cli"
path = "src/main.rs"

[[bin]]
name = "moltbook"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
colored = "2.1"
dirs = "5.0"
urlencoding = "2.1"
dialoguer = "0.11"
textwrap = "0.16"
mime_guess = "2.0"
terminal_size = "0.4.3"
chrono = "0.4.43"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
wiremock = "0.6.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
